# utoipa-auto-docs-example

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  handler.rs  main.rs  swagger_docs.rs  types.rs
